Update audio source from WAV to FLAC format

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
   <h3>Sample 1</h3>
 
   <audio controls>
-    <source src="audio/sample1.wav" type="audio/wav">
+    <source src="audio/DF_E_2000079.flac" type="audio/flac">
   </audio>
+
 
   <p>How real does this sound?</p>
 
@@ -46,3 +47,4 @@ function submitSurvey() {
 
 </body>
 </html>
+
