--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,63 @@
 <html>
 <head>
   <title>Deepfake Audio Survey</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    .card { border: 1px solid #ddd; padding: 20px; margin-bottom: 20px; }
-    select, button { margin-top: 10px; }
-  </style>
+ <style>
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+  background: #f3f4f6;
+  margin: 0;
+  padding: 40px;
+}
+
+.container {
+  max-width: 700px;
+  margin: auto;
+  background: white;
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+}
+
+h1 {
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 16px;
+}
+
+.card {
+  border: 1px solid #e5e7eb;
+  padding: 16px;
+  border-radius: 10px;
+}
+
+label {
+  font-weight: 600;
+}
+
+select, button {
+  margin-top: 10px;
+  padding: 8px 12px;
+  font-size: 14px;
+}
+
+button {
+  background: #2563eb;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #1e40af;
+}
+
+#status {
+  margin-top: 10px;
+  font-weight: 600;
+}
+</style>
+
 </head>
 
 <body>
@@ -62,5 +114,6 @@ async function submitSurvey() {
 
 </body>
 </html>
+
 
 
