--- a/public/index.html
+++ b/public/index.html
@@ -2,123 +2,107 @@
 <html>
 <head>
   <title>Deepfake Audio Survey</title>
- <style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-  background: #f3f4f6;
-  margin: 0;
-  padding: 40px;
-}
-
-.container {
-  max-width: 700px;
-  margin: auto;
-  background: white;
-  padding: 24px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-}
-
-h1 {
-  text-align: center;
-  font-size: 22px;
-  margin-bottom: 16px;
-}
-
-.card {
-  border: 1px solid #e5e7eb;
-  padding: 16px;
-  border-radius: 10px;
-}
-
-label {
-  font-weight: 600;
-}
-
-select, button {
-  margin-top: 10px;
-  padding: 8px 12px;
-  font-size: 14px;
-}
-
-button {
-  background: #2563eb;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #1e40af;
-}
-
-#status {
-  margin-top: 10px;
-  font-weight: 600;
-}
-</style>
-
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background: #f5f5f5;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #ccc;
+    }
+    h2 { text-align: center; }
+    .section { margin-bottom: 20px; }
+    .box {
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
+<div class="container">
 
 <h2>Deepfake Audio Survey</h2>
 
-<div class="container">
-  <h1>🎧 Deepfake Audio Survey</h1>
+<div class="section box">
+  <h3>Participant Information</h3>
 
-  <div class="card">
-    <h3>Sample 1</h3>
+  Name: <input type="text" id="name"><br><br>
 
-    <audio controls>
-      <source src="audio/DF_E_2000079.flac" type="audio/flac">
-    </audio>
+  Age:<br>
+  <input type="radio" name="age" value="18-25"> 18–25  
+  <input type="radio" name="age" value="26-35"> 26–35  
+  <input type="radio" name="age" value="36-50"> 36–50  
+  <input type="radio" name="age" value="50+"> 50+  
+  <br><br>
 
-    <p><strong>How real does this sound?</strong></p>
+  Familiar with deepfakes?<br>
+  <input type="radio" name="familiar" value="No"> No  
+  <input type="radio" name="familiar" value="Somewhat"> Somewhat  
+  <input type="radio" name="familiar" value="Very"> Very  
+  <br><br>
 
-    <select id="q1">
-      <option value="very_fake">Very Fake</option>
-      <option value="fake">Fake</option>
-      <option value="neutral">Neutral</option>
-      <option value="real">Real</option>
-      <option value="very_real">Very Real</option>
-    </select>
-
-    <br><br>
-    <button onclick="submitSurvey()">Submit</button>
-
-    <p id="status"></p>
-  </div>
+  Hearing impairment?<br>
+  <input type="radio" name="hearing" value="No"> No  
+  <input type="radio" name="hearing" value="Mild"> Mild  
+  <input type="radio" name="hearing" value="Significant"> Significant  
 </div>
 
+<div class="section box">
+  <h3>Sample 1</h3>
+  <audio controls>
+    <source src="audio/DF_E_2000079.flac" type="audio/flac">
+  </audio>
+
+  <p><b>How real does this sound?</b></p>
+  <input type="radio" name="realness" value="Very Fake"> Very Fake  
+  <input type="radio" name="realness" value="Fake"> Fake  
+  <input type="radio" name="realness" value="Neutral"> Neutral  
+  <input type="radio" name="realness" value="Real"> Real  
+  <input type="radio" name="realness" value="Very Real"> Very Real  
+</div>
+
+<div class="section box">
+  <h3>Artifact Categories (select all that apply)</h3>
+  <input type="checkbox" value="Robot"> Robot-like voice<br>
+  <input type="checkbox" value="Pauses"> Unnatural pauses<br>
+  <input type="checkbox" value="Repetition"> Word repetition<br>
+  <input type="checkbox" value="Prosody"> Prosody mismatch<br>
+  <input type="checkbox" value="Noise"> Background noise artifacts<br>
+</div>
+
+<div class="section box">
+  <h3>Additional Comments</h3>
+  <textarea id="comments" rows="4" cols="80"></textarea>
+</div>
+
+<button onclick="submitSurvey()">Submit</button>
+<p id="status"></p>
 
 <script>
-async function submitSurvey() {
-  let answer = document.getElementById("q1").value;
-
-  const payload = {
-    sample: "sample_1",
-    rating: answer
-  };
-
-  const response = await fetch(
-    "https://script.google.com/macros/s/AKfycbznaTo8LoTqBdRgCR02x_uoeqeShP6BkPpqW36XzzJ7SbbwTpWNvHtD_FBZ-NjhPWS4/exec",
-    {
-      method: "POST",
-      body: JSON.stringify(payload)
-    }
-  );
-
+function submitSurvey() {
   document.getElementById("status").innerText =
-    "Response saved to Google Sheets ✅";
+    "Response submitted successfully!";
 }
 </script>
 
-
+</div>
 </body>
 </html>
-
-
-
-
