--- a/public/index.html
+++ b/public/index.html
@@ -2,99 +2,151 @@
 <html>
 <head>
   <title>Deepfake Audio Survey</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background: #f5f5f5;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px #ccc;
-    }
-    h2 { text-align: center; }
-    .section { margin-bottom: 20px; }
-    .box {
-      border: 1px solid #ddd;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 15px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+ <style>
+  body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    background: #f6f7fb;
+    margin: 0;
+    padding: 40px;
+    color: #111827;
+  }
+
+  .container {
+    max-width: 760px;
+    margin: auto;
+    background: transparent;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 24px;
+  }
+
+  .card {
+    background: #ffffff;
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+    padding: 20px 24px;
+    margin-bottom: 20px;
+  }
+
+  .card h2 {
+    margin-top: 0;
+    font-size: 18px;
+    color: #4f46e5;
+  }
+
+  label {
+    margin-right: 14px;
+    cursor: pointer;
+  }
+
+  input[type="text"] {
+    padding: 6px 8px;
+    border-radius: 6px;
+    border: 1px solid #d1d5db;
+    width: 200px;
+  }
+
+  .options {
+    margin: 10px 0;
+  }
+
+  button {
+    background: #4f46e5;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background: #4338ca;
+  }
+
+  textarea {
+    width: 100%;
+    min-height: 80px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #d1d5db;
+  }
+
+  audio {
+    width: 100%;
+    margin: 10px 0;
+  }
+</style>
+
 </head>
 
 <body>
-<div class="container">
 
-<h2>Deepfake Audio Survey</h2>
+  <div class="container">
 
-<div class="section box">
-  <h3>Participant Information</h3>
+  <h1>Deepfake Audio Survey</h1>
 
-  Name: <input type="text" id="name"><br><br>
+  <div class="card">
+    <h2>Participant Information</h2>
 
-  Age:<br>
-  <input type="radio" name="age" value="18-25"> 18–25  
-  <input type="radio" name="age" value="26-35"> 26–35  
-  <input type="radio" name="age" value="36-50"> 36–50  
-  <input type="radio" name="age" value="50+"> 50+  
-  <br><br>
+    Name:<br>
+    <input type="text" id="name"><br><br>
 
-  Familiar with deepfakes?<br>
-  <input type="radio" name="familiar" value="No"> No  
-  <input type="radio" name="familiar" value="Somewhat"> Somewhat  
-  <input type="radio" name="familiar" value="Very"> Very  
-  <br><br>
+    Age:<br>
+    <input type="radio" name="age" value="18-25"> 18–25  
+    <input type="radio" name="age" value="26-35"> 26–35  
+    <input type="radio" name="age" value="36-50"> 36–50  
+    <input type="radio" name="age" value="50+"> 50+  
+    <br><br>
 
-  Hearing impairment?<br>
-  <input type="radio" name="hearing" value="No"> No  
-  <input type="radio" name="hearing" value="Mild"> Mild  
-  <input type="radio" name="hearing" value="Significant"> Significant  
+    Familiar with deepfakes?<br>
+    <input type="radio" name="familiar" value="No"> No  
+    <input type="radio" name="familiar" value="Somewhat"> Somewhat  
+    <input type="radio" name="familiar" value="Very"> Very  
+    <br><br>
+
+    Hearing impairment?<br>
+    <input type="radio" name="hearing" value="No"> No  
+    <input type="radio" name="hearing" value="Mild"> Mild  
+    <input type="radio" name="hearing" value="Significant"> Significant  
+  </div>
+
+  <div class="card">
+    <h2>Sample 1</h2>
+
+    <audio controls>
+      <source src="audio/DF_E_2000079.flac" type="audio/flac">
+    </audio>
+
+    <p><b>How real does this sound?</b></p>
+    <input type="radio" name="realness" value="Very Fake"> Very Fake  
+    <input type="radio" name="realness" value="Fake"> Fake  
+    <input type="radio" name="realness" value="Neutral"> Neutral  
+    <input type="radio" name="realness" value="Real"> Real  
+    <input type="radio" name="realness" value="Very Real"> Very Real  
+  </div>
+
+  <div class="card">
+    <h2>Artifact Categories (select all that apply)</h2>
+
+    <input type="checkbox" value="Robot"> Robot-like voice<br>
+    <input type="checkbox" value="Pauses"> Unnatural pauses<br>
+    <input type="checkbox" value="Repetition"> Word repetition<br>
+    <input type="checkbox" value="Prosody"> Prosody mismatch<br>
+    <input type="checkbox" value="Noise"> Background noise artifacts<br>
+  </div>
+
+  <div class="card">
+    <h2>Additional Comments</h2>
+    <textarea id="comments"></textarea>
+  </div>
+
+  <button onclick="submitSurvey()">Submit</button>
+  <p id="status"></p>
+
 </div>
-
-<div class="section box">
-  <h3>Sample 1</h3>
-  <audio controls>
-    <source src="audio/DF_E_2000079.flac" type="audio/flac">
-  </audio>
-
-  <p><b>How real does this sound?</b></p>
-  <input type="radio" name="realness" value="Very Fake"> Very Fake  
-  <input type="radio" name="realness" value="Fake"> Fake  
-  <input type="radio" name="realness" value="Neutral"> Neutral  
-  <input type="radio" name="realness" value="Real"> Real  
-  <input type="radio" name="realness" value="Very Real"> Very Real  
-</div>
-
-<div class="section box">
-  <h3>Artifact Categories (select all that apply)</h3>
-  <input type="checkbox" value="Robot"> Robot-like voice<br>
-  <input type="checkbox" value="Pauses"> Unnatural pauses<br>
-  <input type="checkbox" value="Repetition"> Word repetition<br>
-  <input type="checkbox" value="Prosody"> Prosody mismatch<br>
-  <input type="checkbox" value="Noise"> Background noise artifacts<br>
-</div>
-
-<div class="section box">
-  <h3>Additional Comments</h3>
-  <textarea id="comments" rows="4" cols="80"></textarea>
-</div>
-
-<button onclick="submitSurvey()">Submit</button>
-<p id="status"></p>
 
 <script>
 const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxNOlfNj-Y55V-gvLHxQg4TyXCphUzU7jNpIdoG6fHRCLVJ__6GvdU7bf-WCfp_QieV/exec";
@@ -141,4 +193,5 @@ async function submitSurvey() {
 </div>
 </body>
 </html>
+
 
