Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+rded<!DOCTYPE html>
 <html>
 <head>
   <title>Deepfake Audio Survey</title>
@@ -185,7 +185,7 @@ async function submitSurvey() {
   });
 
   document.getElementById("status").innerText =
-    "Response saved to Google Sheets!";
+    "Thank you for your response!";
 }
 </script>
 
@@ -193,5 +193,6 @@ async function submitSurvey() {
 </div>
 </body>
 </html>
+
 
 
