Fix HTML encoding and improve accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -129,13 +129,14 @@
   </div>
 
   <div class="card">
+    
     <h2>Artifact Categories (select all that apply)</h2>
+    <input type="checkbox" value="Robot" title="Speech sounds synthetic or mechanical"> Robot-like voice<br>
+    <input type="checkbox" value="Pauses" title="Odd or misplaced silences"> Unnatural pauses<br>
+    <input type="checkbox" value="Repetition" title="Unexpected word repetition"> Word repetition<br>
+    <input type="checkbox" value="Prosody" title="Emotion or rhythm feels wrong"> Prosody mismatch<br>
+    <input type="checkbox" value="Noise" title="Strange background distortions"> Background noise artifacts<br>
 
-    <input type="checkbox" value="Robot"> Robot-like voice<br>
-    <input type="checkbox" value="Pauses"> Unnatural pauses<br>
-    <input type="checkbox" value="Repetition"> Word repetition<br>
-    <input type="checkbox" value="Prosody"> Prosody mismatch<br>
-    <input type="checkbox" value="Noise"> Background noise artifacts<br>
   </div>
 
   <div class="card">
@@ -220,6 +221,7 @@ async function submitSurvey() {
 </div>
 </body>
 </html>
+
 
 
 
