Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <input type="text" id="name"><br><br>
 
     Age:<br>
-    <input type="number" id="age" min="10" max="100" placeholder="Enter your age">
+    <input type="number" id="age" min="10" max="100">
     <br><br>
 
     Familiar with deepfakes?<br>
@@ -262,6 +262,7 @@ async function submitSurvey() {
 </div>
 </body>
 </html>
+
 
 
 
