--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,53 @@
     }
 
     .container {
-      max-width: 760px;
+      max-width: 900px;      /* matches your screenshot width */
       margin: auto;
-      background: transparent;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 24px;
+      font-weight: 700;
     }
 
     .card {
       background: #ffffff;
       border: 1px solid #e5e7eb;
-      border-radius: 12px;
-      padding: 20px 24px;
-      margin-bottom: 20px;
+      border-radius: 16px;
+      padding: 28px 32px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+
+    input, select {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
+      width: 100%;
+      box-sizing: border-box;
+      font-size: 14px;
+    }
+
+    label {
+      font-size: 14px;
+      font-weight: 600;
+      color: #374151;
+    }
+
+    .field {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      margin-bottom: 18px;
+    }
+
+    .consent-row {
+      display: flex;
+      align-items: flex-start;
+      gap: 12px;
+      margin: 20px 0;
+      color: #4b5563;
+      font-size: 14px;
     }
 
     button {
@@ -39,28 +75,6 @@
       background: #4338ca;
     }
 
-    input, select {
-      padding: 6px 8px;
-      border-radius: 6px;
-      border: 1px solid #d1d5db;
-      width: 250px;
-    }
-    .field {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-      margin-bottom: 16px;
-    }
-    .consent-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin: 12px 0;
-    }
-    .footer {
-      margin-top: 16px;
-    }
-
   </style>
 </head>
 
@@ -69,6 +83,7 @@
 <div class="container">
 
 <h1>Audio Deepfake Detection and Explainability</h1>
+
 <div class="card">
   <h2>Participant Details</h2>
 
@@ -121,14 +136,10 @@
     </span>
   </div>
 
-  <div class="footer">
-    <button onclick="proceed()">Start Survey</button>
-  </div>
+  <button onclick="proceed()">Start Survey</button>
 </div>
 
-
-
-  
+</div>
 
 <script>
 function proceed() {
@@ -148,13 +159,11 @@ function proceed() {
     return;
   }
 
-
   localStorage.setItem("name", document.getElementById("name").value);
   localStorage.setItem("age", document.getElementById("age").value);
   localStorage.setItem("gender", document.getElementById("gender").value);
   localStorage.setItem("hearing", document.getElementById("hearing").value);
   localStorage.setItem("tech", document.getElementById("tech").value);
-
 
   window.location.href = "survey.html";
 }
@@ -162,4 +171,3 @@ function proceed() {
 
 </body>
 </html>
-
